# simulacion-urbana

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  plan_4_semanas.md  pyproject.toml  simulacion_urbana_v2.md
.github/: how-i-work-sync.json  pull_request_template.md
.github/workflows/: audit.yml  ci.yml  package.yml
packaging/: citysim-desktop.spec  entry.py
src/citysim/: __init__.py  __main__.py  config.py  invariants.py  rng.py
src/citysim/eventlog/: __init__.py  apply.py  log.py
src/citysim/facade/: __init__.py  dto.py  simulation.py
src/citysim/observers/: __init__.py  citizen.py
src/citysim/projector/: __init__.py  projector.py
src/citysim/scheduler/: __init__.py  clock.py
src/citysim/seed/: __init__.py  seeder.py
src/citysim/state/: __init__.py  enums.py  event.py  household.py  person.py  place.py  relationship.py  world.py
src/citysim/systems/: __init__.py  aging.py  base.py  contagion.py  death.py  decision.py  economy.py  emotion.py  goals.py  memory.py  needs.py  relations.py  wellbeing.py
src/citysim_desktop/: __init__.py  __main__.py  controller.py  layout.py  paths.py  view.py
tests/: test_desktop_controller.py  test_desktop_paths.py  test_determinism.py  test_facade.py  test_invariants.py  test_week2_identity.py  test_week3_trajectory.py
