[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "citysim"
version = "0.1.0"
description = "Simulación urbana persistente: una sociedad artificial emergente"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Interfaz de escritorio (cliente Pygame, ADR-0012). Opcional: el núcleo y la fachada
# no dependen de esto. Instalar con  pip install ".[ui]"
ui = ["pygame>=2.5"]
# Herramientas para empaquetar el cliente a ejecutable (ADR-0013). Opcional.
# Instalar con  pip install ".[ui,build]"
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
