[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "citysim"
version = "0.3.0a1"
description = "Persistent urban simulation: an emergent artificial society"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Desktop interface (Pygame client, ADR-0012). Optional: the core and facade
# do not depend on this. Install with  pip install ".[ui]"
ui = ["pygame>=2.5"]
# Tools for packaging the client as an executable (ADR-0013). Optional.
# Install with  pip install ".[ui,build]"
build = ["pyinstaller>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
